@@ -6,6 +6,10 @@ Changes since 2.4.19:
 * New wrapping of OpenLDAP's function ldap_sasl_bind_s() allows
   to intercept the SASL handshake (thanks to René Kijewski)
 
+Lib/
+* Abandoned old syntax when raising ValueError in module ldif and
+  some more information in exceptions.
+
 ----------------------------------------------------------------
 Released 2.4.19 2015-01-10
 
@@ -1152,4 +1156,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.339 2015/05/02 16:19:23 stroeder Exp $
+$Id: CHANGES,v 1.340 2015/06/05 20:55:05 stroeder Exp $
